tests/fixtures/valid/real_world_smoke/08_if_expression.pine
//@version=6
indicator("If Expr")
c = if close > open
    color.green
else
    color.red
plot(close)
