tests/fixtures/invalid/semantic/plot_in_local_block.pine
//@version=6
indicator("x")
if close > open
    plot(close)
